fix text alignment

--- a/src/mortgage/style.scss
+++ b/src/mortgage/style.scss
@@ -68,7 +68,7 @@
 	table {
 		width: 100% !important;
 	}
-	table td {
+	table td, th {
 		text-align: center;
 	}
 }
